<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@color/purple_500"
        android:text="@string/donation"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:gravity="center"/>
    //gravity is for content alignment
    <TextView
        android:id="@+id/payment_text"
        android:text="@string/please_choose_your_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_below="@id/title_text"
        android:layout_marginTop="30dp"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/payment_text"
        android:layout_marginTop="40dp">

        <RadioButton
            android:id="@+id/paypal_radio_btn"
            android:text="@string/paypal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />

        <RadioButton
            android:id="@+id/credit_card_radio_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credit_card" />
    </RadioGroup>

    <Button
        android:id="@+id/donate_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/black"
        android:text="@string/donate_now"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/donation_amount_txtfd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/donate_btn"
        android:layout_marginBottom="20sp"
        android:hint="@string/please_enter_the_amount"

        android:inputType="number"
        android:minHeight="48dp" />


</RelativeLayout>